Fix overflow

--- a/style/components/gallery.css
+++ b/style/components/gallery.css
@@ -4,6 +4,7 @@
 
 body {
     background-color: whitesmoke;
+    overflow-x: hidden;
 }
 
 .gallery-container {
@@ -12,11 +13,9 @@ body {
 
     grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
     place-items: center;
-    place-content: baseline;
-    grid-auto-flow: dense;
+
     padding: 2em;
     margin-inline: auto;
-
 }
 
 .gallery-container>img {
